<resources>
    <string name="app_name">MotionRecorder</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Ustawienia</string>
    <string name="action_logout">Wyloguj</string>
    <string name="action_delete">Usuń</string>

    <string name="username">Nazwa użytkownika</string>
    <string name="password">Hasło</string>
    <string name="wrong_password">Hasło niepoprawne dla użytkownika \'%1$s\'</string>
    <string name="user_not_found">Użytkownik \'%1$s\' nie istnieje</string>

    <string name="authentication_username_placeholder">wpisz nazwę użytkownika</string>
    <string name="authentication_password_placeholder">wpisz hasło</string>
    <string name="authentication_repeat_password_placeholder">wpisz ponownie hasło</string>

    <string name="login_button_text">Zaloguj się</string>
    <string name="register_button_text">Rejestracja</string>
    <string name="start_training_button_text">Rozpocznij</string>
    <string name="finish_training_button_text">Zakończ</string>
    <string name="pause_training_button_text">Pauza</string>
    <string name="resume_training_button_text">Wznów</string>

    <string name="login_activity_heading">Logowanie</string>
    <string name="register_activity_heading">Rejestracja</string>

    <string name="title_activity_main">Menu główne</string>
    <string name="title_activity_register">Rejestracja</string>
    <string name="title_authentication_activity">Logowanie</string>

    <string name="male">Mężczyzna</string>
    <string name="female">Kobieta</string>
    <string name="date_of_birth">Data urodzenia:</string>
    <string name="gender">Płeć:</string>
    <string name="weight_placeholder">podaj wagę (kg)</string>
    <string name="height_placeholder">podaj wzrost (cm)</string>

    <string name="register_request_success">Rejestracja zakończona sukcesem</string>

    <string-array name="drawer_list_items">
        <item>Trening</item>
        <item>Trasa</item>
        <item>Zapisane</item>
    </string-array>

    <string name="drawer_list_open">Otwórz menu</string>
    <string name="drawer_list_close">Zamknij menu</string>

    <string name="timer_label">Czas</string>
    <string name="timer_init_value">00:00:00</string>

    <string name="distance_label">Dystans\nm</string>
    <string name="distance_init_value">0.00</string>

    <string name="speed_label">Prędkość\nm/s</string>
    <string name="speed_init_value">0.00</string>

    <string name="start_training_date_label">Data rozpoczęcia</string>
    <string name="finish_training_date_label">Data zakończenia</string>
    <string name="duration_label">Czas aktywności\ngg:mm:ss</string>
    <string name="max_speed_label">Maks. prędkość\nm/s</string>
    <string name="avg_speed_label">Śr. prędkość\nm/s</string>
    <string name="title_activity_training_stats">Szczegóły treningu</string>
    <string name="show_route_button_text">Pokaż trasę</string>
    <string name="show_speed_graph_button_text">Pokaż wykres prędkości</string>
    <string name="title_activity_route_map">Szczegóły trasy</string>
    <string name="title_activity_speed_graph">Wykres prędkości</string>

</resources>
