<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="put.iwm.android.motionrecorder.activities.RegisterActivity$PlaceholderFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">

            <EditText
                android:id="@+id/username_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="15dp"
                android:ems="10"
                android:hint="@string/authentication_username_placeholder"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/password_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="15dp"
                android:ems="10"
                android:hint="@string/authentication_password_placeholder"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/password_repeat_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="15dp"
                android:ems="10"
                android:hint="@string/authentication_repeat_password_placeholder"
                android:inputType="textPassword" />


            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="15dp"
                android:inputType="numberSigned"
                android:ems="10"
                android:hint="@string/height_placeholder"
                android:id="@+id/height" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="15dp"
                android:inputType="numberSigned"
                android:ems="10"
                android:hint="@string/weight_placeholder"
                android:id="@+id/weight" />

            <TextView
                android:id="@+id/gender_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="15dp"
                android:text="@string/gender"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <RadioGroup
                android:id="@+id/gender_radio_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:orientation="horizontal"
                android:checkedButton="@+id/male_radio_button">

                <RadioButton
                    android:id="@+id/male_radio_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="15dp"

                    android:text="@string/male" />

                <RadioButton
                    android:id="@+id/female_radio_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/female" />

            </RadioGroup>

            <TextView
                android:id="@+id/date_of_birth_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="15dp"
                android:text="@string/date_of_birth"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <DatePicker
                android:id="@+id/date_of_birth_picker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:calendarViewShown="false"
                android:datePickerMode="spinner"  />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/register_button_text"
                    android:id="@+id/register_request_button"
                    android:layout_margin="5dp" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>


</RelativeLayout>
